--- a/provision_test/Vagrantfile
+++ b/provision_test/Vagrantfile
@@ -49,8 +49,12 @@ config.vm.network "forwarded_port", guest: 80, host: 8080
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
-  # config.vm.network "public_network"
-
+  #config.vm.network "public_network"
+  # config.vm.network "public_network", bridge: "en1: Wi-Fi (AirPort)"
+  
+  config.vm.network "public_network", bridge: "en0: Wi-Fi (AirPort)"
+    #use_dhcp_assigned_default_route: true
+ 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
